# spin-rust

./: Cargo.toml  spin.toml
src/: lib.rs  utils.rs
