[package]
authors = ["taroosg <root@taroosg.dev>"]
description = "First app."
edition = "2021"
name = "spin-rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = {git = "https://github.com/fermyon/spin", tag = "v1.0.0"}
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = {git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.2"

[workspace]
